# codegpt

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  ai.spec  app.py  bot.py  build-mobile.ps1  build.ps1  chat.py  codex-instructions.md  desktop.py  install-termux.sh  install.ps1  mobile.py  package.json  pyproject.toml  requirements.txt  run.py  sbom.json  server.py  tui.py  uninstall.ps1  web.py
.githooks/: pre-commit
.github/workflows/: npm-publish.yml  release.yml  security.yml
ai_cli/: __init__.py  __main__.py  doctor.py  updater.py
